Dockerizing server project

--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ ENV=development
 
 DJANGO_DEBUG=True
 DJANGO_ALLOWED_HOSTS=*
-DJANGO_SECRET_KEY=
+DJANGO_SECRET_KEY=ct4=p+c+ye*uilk(z+*34)(jk52v_2qj+t@b7v^9jr+w&170m!
 
 # Database
-DB_NAME=db_name
+DB_NAME=helloteam_db
 DB_USER=root
 DB_PASS=docker
 DB_HOST=db
