--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,6 @@ target/
 celerybeat-schedule
 
 # dotenv
-.env
 local.env
 
 # virtualenv
@@ -114,4 +113,4 @@ yarn-error.log*
 
 staticfiles/
 static/
-*/tmp/
+tmp/
