--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3"
 services:
   db:
-    container_name: gymphone.db
+    container_name: helloteam.db
     image: mysql:5.7
     ports:
       - '3309:3306'
     environment:
-       MYSQL_DATABASE: 'gym_phone'
+       MYSQL_DATABASE: 'helloteam_db'
        MYSQL_ROOT_PASSWORD: 'docker'
     volumes:
-      - /tmp/gymphone/mysql:/var/lib/mysql
+      - ./tmp/helloteam/mysql:/var/lib/mysql
 
   web:
-    container_name: gymphone.web
+    container_name: helloteam.web
     env_file:
       - .env
     build: .
