--- a/.env
+++ b/.env
@@ -10,3 +10,32 @@ DB_USER=root
 DB_PASS=docker
 DB_HOST=db
 DB_PORT=3306
+
+# Swagger
+SWAGGER_SCHEME_URL=http://localhost:8000
+
+# Email
+EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
+EMAIL_HOST=mailhog
+EMAIL_PORT=1025
+
+# AWS
+
+AWS_ACCESS_KEY_ID=AKIAU4XCDREOSK33PXG4
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_ACL=public-read
+AWS_STORAGE_BUCKET_NAME=helloteam-static-staging
+
+FRONTEND_URL=http://localhost:4200
+API_URL=http://localhost:8000
+
+AWS_IMAGE_HANDLER_URL=https://d2e9cx9iaqmah.cloudfront.net
+
+IMAGE_THUMB_WIDTH=320
+IMAGE_THUMB_HEIGHT=320
+IMAGE_LANDSCAPE_WIDTH=1080
+IMAGE_LANDSCAPE_HEIGHT=566
+IMAGE_PORTRAIT_WIDTH=1080
+IMAGE_PORTRAIT_HEIGHT=1350
+IMAGE_SQUARE_WIDTH=1080
+IMAGE_SQUARE_HEIGHT=1080
